# birdeos

./: .gitignore  CMakeLists.txt  README.md  start.sh
3rd_parties/CImg/: Licence_CeCILL-C_V1-en.txt  Licence_CeCILL_V2-en.txt
3rd_parties/EDSDK/: ReleaseNote.txt
3rd_parties/EDSDK/Framework/EDSDK.framework/Versions/A/: EDSDK
3rd_parties/EDSDK/Framework/EDSDK.framework/Versions/A/CHHLLite.bundle/Contents/MacOS/: CHHLLite
3rd_parties/EDSDK/Framework/EDSDK.framework/Versions/A/EdsImage.bundle/Contents/MacOS/: EdsImage
3rd_parties/EDSDK/Framework/EDSDK.framework/Versions/A/Resources/: Info.plist
3rd_parties/EDSDK/Framework/EDSDK.framework/Versions/A/_CodeSignature/: CodeResources
3rd_parties/darknet/: darknet.h
app/src/: main.cpp
cfg/: coco.data
lib/src/: darknetpp.h  eospp.cpp  eospp.h  gui.cpp  gui.h
